--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
         <div class="container">
 
             <h1> I have Bad News For You</h1>
-            <p>The Page you are looking <br>for might be removed or<br> Temborarily unavilable</p>
+            <h4>The Page you are looking <br>for might be removed or<br> Temborarily unavilable</h4>
                 <button type="button"> Back to HomePage</button>
         </div>
     </div>
+   
   
 
 
